# compact_path_tree

./: Cargo.toml  README.md
examples/: from_dir.rs
src/: lib.rs
